# Pipeline-c-

./: .contextignore  .gitignore  .repomixignore  CMakeLists.txt  CMakePresets.json  README.md  continue.md  fix_threadpool.ps1  gen-context.config.json
.github/: copilot-instructions.md
bench/: CMakeLists.txt
bench/compile_time/: branch_fan_in_10.cpp  chain_5.cpp  chain_50.cpp  collect_baseline.sh  include_pipeline.cpp  pipeline_50_stage.cpp
bench/runtime/: sequential_5_stage.cpp  thread_pool_fan_in.cpp
build-worker-4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  pipebuilderConfig.cmake
cmake/: PBCompilerOptions.cmake  PBPackageSmoke.cmake.in  pipebuilderConfig.cmake.in
docs/: README.md  benchmark-baselines.md  build.md  (+29 more)
examples/: CMakeLists.txt  basic_order_pipeline.cpp  basic_pipeline.cpp  branch_error_handling.cpp  branch_heterogeneous_demo.cpp  branch_routing_demo.cpp  coroutine_stage_demo.cpp  descriptor_demo.cpp  error_diagnostic.cpp  policy_dsl_demo.cpp  sender_receiver_stage_demo.cpp  thread_pool_fan_in_demo.cpp
tests/: CMakeLists.txt  run_compile_fail.cmake  run_pb_cli_command.cmake  run_pb_cli_describe.cmake  run_pb_cli_describe_args.cmake  run_pb_cli_list.cmake  smoke.cpp
tests/compile_fail/: adapt_direct_member_callable_mismatch.cpp  adapt_direct_member_non_default_initializable.cpp  adapt_direct_member_output_mismatch.cpp  adapt_fn_callable_mismatch.cpp  adapt_fn_input_mismatch.cpp  adapt_fn_output_mismatch.cpp  adapt_functor_callable_mismatch.cpp  adapt_functor_non_default_initializable.cpp  adapt_functor_output_mismatch.cpp  adapt_member_callable_mismatch.cpp  adapt_member_output_mismatch.cpp  adapt_non_final_void_stage_mismatch.cpp  adapt_void_input_mismatch.cpp  adapt_void_non_default_initializable.cpp  adapt_void_non_void_callable.cpp  branch_builder_empty_cases_unsupported.cpp  branch_builder_source_mismatch.cpp  branch_case_input_mismatch.cpp  branch_case_invalid_predicate_misuse.cpp  branch_case_output_non_case_misuse.cpp  branch_case_predicate_output_mismatch.cpp  branch_fan_in_join_type_mismatch.cpp  branch_fan_in_move_only_input_unsupported.cpp  branch_fan_in_void_output_unsupported.cpp  branch_fan_in_without_branch.cpp  branch_heterogeneous_join_type_mismatch.cpp  branch_join_execution_unsupported.cpp  branch_join_type_mismatch.cpp  branch_move_only_input_unsupported.cpp  branch_move_only_predicate_by_value_unsupported.cpp  branch_node_case_input_mismatch.cpp  branch_output_validation_mismatch.cpp  branch_outputs_case_input_mismatch.cpp  branch_outputs_empty_misuse.cpp  branch_outputs_heterogeneous_join_unsupported.cpp  branch_outputs_invalid_case_misuse.cpp  branch_outputs_join_node_boundary_misuse.cpp  branch_topology_unsupported_boundary.cpp  branch_type_list_join_missing_handler.cpp  branch_unified_output_validation_mismatch.cpp  (+77 more)
tests/compile_pass/: adapt_functor.cpp  adapt_void.cpp  backend_scaffolds_smoke.cpp  branch_compile_time_smoke.cpp  branch_fan_in_compile_pass.cpp  branch_fan_in_void_output.cpp  branch_heterogeneous_compile_pass.cpp  branch_join_validation_compile_pass.cpp  branch_move_only_input.cpp  branch_selection_compile_pass.cpp  branch_topology_heterogeneous_compile_pass.cpp  branch_type_list_join_compile_pass.cpp  compile_time_bench.cpp  core_concepts_false_paths.cpp  cpp26_features.cpp  cpp26_features_fallback.cpp  describe_pipeline.cpp  diagnostics_contract.cpp  expected_like_result_ok.cpp  export_dot.cpp  export_dot_branch.cpp  export_golden.cpp  export_json.cpp  export_json_branch.cpp  export_text.cpp  export_text_golden.cpp  pipeline_stage_io_aliases.cpp  policy_axes_compile_pass.cpp  policy_dsl.cpp  public_headers.cpp  reflect_stage_gate.cpp  result_error_type_compatible.cpp  schema_v1_contract.cpp  schema_v1_cross_version_regression.cpp  schema_v1_extended_golden.cpp  smoke_pipeline.cpp  stage_info.cpp  stage_naming_descriptor.cpp  terminate_on_error_smoke.cpp  tooling_cli_registry_compile_pass.cpp  (+1 more)
tests/compile_pass/public_headers/: adapt_coroutine.cpp  adapt_fn.cpp  adapt_member.cpp  adapt_reflect.cpp  adapt_runtime_callable.cpp  adapt_sender_receiver.cpp  adapt_void.cpp  adaptors.cpp  core_concepts.cpp  core_describe.cpp  core_diagnostics.cpp  core_fixed_string.cpp  core_meta.cpp  core_pipeline_state.cpp  core_stage_traits.cpp  core_validate.cpp  export_dot.cpp  export_json.cpp  export_text.cpp  pipeline.cpp  runtime_backend.cpp  runtime_cancellation.cpp  runtime_clone_unique.cpp  runtime_descriptor.cpp  runtime_error.cpp  runtime_fan_in_error.cpp  runtime_observer.cpp  runtime_result.cpp  runtime_routing.cpp  runtime_sequential.cpp  runtime_trace.cpp  tooling_cli_registry.cpp
tests/module/: use_module.cpp
tests/runtime/: adapt_void_smoke.cpp  backend_feature_matrix_smoke.cpp  coroutine_adapter_smoke.cpp  descriptor_smoke.cpp  error_diagnostic_smoke.cpp  error_json_serialization_smoke.cpp  fan_in_error_envelope_smoke.cpp  fan_in_observer_events_smoke.cpp  fan_in_shared_view_smoke.cpp  fan_in_unique_clone_smoke.cpp  observer_schema_v1_regression.cpp  policy_axes_runtime_smoke.cpp  policy_dsl_composability_smoke.cpp  policy_dsl_engine_smoke.cpp  policy_dsl_parity_matrix_branch.cpp  policy_dsl_parity_matrix_fan_in.cpp  policy_dsl_parity_matrix_linear.cpp  policy_dsl_std_expected_matrix.cpp  projected_stage_smoke.cpp  result_smoke.cpp  routing_descriptor_smoke.cpp  runtime_callable_adapter_smoke.cpp  runtime_callable_binding_scope_smoke.cpp  sender_receiver_adapter_smoke.cpp  sequential_adapters_smoke.cpp  sequential_adapters_value_category_smoke.cpp  sequential_branch_comprehensive.cpp  sequential_branch_execution_smoke.cpp  sequential_branch_fan_in.cpp  sequential_branch_heterogeneous.cpp  sequential_branch_move_only.cpp  sequential_branch_smoke.cpp  sequential_branch_type_list_join.cpp  sequential_branch_unnamed_stages.cpp  sequential_custom_error_observer_smoke.cpp  sequential_exception_boundary_smoke.cpp  sequential_expected_like_smoke.cpp  sequential_observer_accessor_smoke.cpp  sequential_observer_smoke.cpp  sequential_observer_try_run_exception_smoke.cpp  (+20 more)
(+65 files in other folders)
