add_executable(pb_bench_include_pipeline compile_time/include_pipeline.cpp)
target_link_libraries(pb_bench_include_pipeline PRIVATE pb::pipeline)
pb_apply_project_options(pb_bench_include_pipeline PRIVATE)
add_test(NAME pb_bench_include_pipeline COMMAND pb_bench_include_pipeline)
set_tests_properties(pb_bench_include_pipeline PROPERTIES LABELS "benchmark;smoke")

add_executable(pb_bench_sequential_5_stage runtime/sequential_5_stage.cpp)
target_link_libraries(pb_bench_sequential_5_stage PRIVATE pb::pipeline)
pb_apply_project_options(pb_bench_sequential_5_stage PRIVATE)
add_test(NAME pb_bench_sequential_5_stage COMMAND pb_bench_sequential_5_stage)
set_tests_properties(pb_bench_sequential_5_stage PROPERTIES LABELS "benchmark;runtime;smoke")
